--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -2,8 +2,10 @@
 
 <h1>Libros</h1>
 
-<table>
-  <thead>
+<%= link_to 'Crear Libro', new_book_path, {:class=>"btn btn-primary"} %>
+<p pt-1></p>
+<table class="table table-striped">
+  <thead class="thead-dark">
     <tr>
       <th>Isbn</th>
       <th>Titulo</th>
@@ -16,13 +18,16 @@
   <tbody>
     <% @books.each do |book| %>
       <tr>
-        <td><%= book.isbn %></td>
+        <td  scope="row"><%= book.isbn %></td>
         <td><%= book.titulo %></td>
         <td><%= book.paginas %></td>
         <td><%= book.editorial %></td>
-        <td><%= link_to 'Show', book %></td>
-        <td><%= link_to 'Edit', edit_book_path(book) %></td>
-        <td><%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', book, {:class=>"btn btn-primary"} %></td>
+        <td><%= link_to 'Edit', edit_book_path(book), {:class=>"btn btn-success"} %></td>
+        <td><%= link_to 'Destroy', book, 
+                     method: :delete,
+                     class: "btn btn-danger", 
+                     data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -30,4 +35,6 @@
 
 <br>
 
-<%= link_to 'New Book', new_book_path %>
+
+
+
