--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,8 +1,7 @@
-<p id="notice"><%= notice %></p>
-
 <h1>Libros</h1>
 
 <%= link_to 'Crear Libro', new_book_path, {:class=>"btn btn-primary"} %>
+<%= link_to 'Autores', authors_path, {:class=>"btn btn-primary"} %>
 <p pt-1></p>
 <table class="table table-striped">
   <thead class="thead-dark">
@@ -11,6 +10,7 @@
       <th>Titulo</th>
       <th>Paginas</th>
       <th>Editorial</th>
+      <th>Ejemplares</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -18,10 +18,11 @@
   <tbody>
     <% @books.each do |book| %>
       <tr>
-        <td  scope="row"><%= book.isbn %></td>
+        <td  scope="row"><%= link_to book.isbn, :controller=>'copies', :action=>'index', :idBook=>book.id %></td>
         <td><%= book.titulo %></td>
         <td><%= book.paginas %></td>
         <td><%= book.editorial %></td>
+        <td><%= book.copies.count %></td>
         <td><%= link_to 'Show', book, {:class=>"btn btn-primary"} %></td>
         <td><%= link_to 'Edit', edit_book_path(book), {:class=>"btn btn-success"} %></td>
         <td><%= link_to 'Destroy', book, 
