--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,12 +25,32 @@
       <li class="nav-item active">
          <%= link_to 'Libros', books_path, :class=> "nav-link" %>  
       </li>
-      
+      <li class="nav-item active">
+        <% if current_user %>
+         <%= link_to 'Salir', destroy_user_session_path, method: :delete, :class=> "nav-link" %>
+        <% else %>
+        <%= link_to 'Login', new_user_session_path, :class=> "nav-link"%>
+        <% end %>
+      </li>
+      <% if current_user!=nil %>
+      <span class="navbar-text">
+      <%=current_user.email%>
+      </span>
+      <% end %>
     </ul>
   </div>
 </nav>
-
-  <div class="container pt-3">
+<% if notice!=nil %> 
+ <div class="alert alert-primary" role="alert">
+ <%= notice %>
+ </div>
+ <%end%>
+ <% if alert!=nil %>  
+ <div class="alert alert-danger" role="alert">
+ <%= alert %>
+</div>
+<%end%>
+  <div class="container pt-3">  
     <%= yield %>
   </div>
   </body>
